<resources>
    <string name="app_name">Coleccion_Android</string>
    <string name="exit_button">Leave Game</string>
    <string name="help_button">Information</string>
    <string name="settings_button">Game Options</string>
    <string name="high_score_button">Top Results</string>
    <string name="new_game_button">Find Coleccions</string>
    <string name="game_coleccion_logo">Banner</string>
    <string name="score_icon">Points</string>
    <string name="timer_icon">Clock</string>
    <string name="game_score">Point Count</string>
    <string name="score">Score</string>
    <string name="game_time_left_seconds">Clock Count</string>
    <string name="time">Time</string>
    <string name="gtype">Game Type</string>
    <string name="pause_button">Break</string>
    <string name="randomize_button">Swap</string>
    <string name="randomize_cards">Randomize Cards</string>
    <string name="coleccion_logo">Game Header</string>
    <string name="card_one">Card One</string>
    <string name="card_two">Card Two</string>
    <string name="card_three">Card Three</string>
    <string name="card_four">Card Four</string>
    <string name="card_five">Card Five</string>
    <string name="card_six">Card Six</string>
    <string name="card_seven">Card Seven</string>
    <string name="card_eight">Card Eight</string>
    <string name="card_nine">Card Nine</string>
    <string name="card_ten">Card Ten</string>
    <string name="card_eleven">Card Eleven</string>
    <string name="card_twelve">Card Twelve</string>
    <string name="resume_button">Back to Game</string>
    <string name="help_info_111">Instructions I</string>
    <string name="help_logo">Instructions Header</string>
    <string name="help_info_4">Instructions II</string>
    <string name="next_button">Next Button</string>
    <string name="back_to_help_1">Back To help 1</string>
    <string name="choose_game_background">Select Board Picture:</string>
    <string name="choose_gt">Select Game Length (seconds):</string>
    <string name="choose_gtype">Select Game Type:</string>
    <string name="scoretwo">Score</string>
    <string name="hint">Assistance</string>
    <string name="examples">\u00A0Card Examples\u00A0</string>
    <string name="playgame">\u00A0Gameplay\u00A0Overview\u00A0</string>
    <string name="hmsge">\u00A0Good\u00A0Luck,\u00A0and\u00A0Have\u00A0Fun!\u00A0</string>
    <string name="gifimg">Starfield</string>
    <string name="dtime">DateNtime</string>
    <string name="dtimetv">Date\u00A0&amp;&#10;Time</string>
    <string name="gtimetv">Game&#10;Duration</string>
    <string name="btime">Background</string>
    <string name="ddown">Download Data</string>
    <string name="dups">Upload Data</string>
    <string name="b2hss">Back to High Scores</string>
    <string name="snmores">More Score Info</string>
</resources>