<?xml version="1.0" encoding="utf-8"?>

<ViewFlipper
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/board_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CardArea">

        <TableLayout
            android:id="@+id/board_layout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_margin="2dp"
                android:gravity="center"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/score_icon"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/score_icon"
                    android:paddingStart="1dp"
                    android:paddingEnd="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/scoreicon2" />

                <ImageView
                    android:id="@+id/timer_icon"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/timer_icon"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gametimericon" />

            </TableRow>

            <TableRow
                android:layout_margin="2dp"
                android:gravity="center"
                android:padding="2dp">

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/game_score"
                    android:fontFamily="@font/ocraextended"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/score"
                    android:textColor="#2A52BE"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/game_time_left_seconds"
                    android:fontFamily="@font/ocraextended"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/time"
                    android:textColor="#FF4500"
                    android:textSize="28sp" />

            </TableRow>

            <TableRow
                android:layout_margin="2dp"
                android:gravity="center"
                android:padding="2dp">

                <ImageButton
                    android:id="@+id/pause_button"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/pause_button"
                    android:paddingStart="1dp"
                    android:paddingEnd="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/pause_icon2" />

                <ImageButton
                    android:id="@+id/hint_button"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/hint"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/hintbutton" />

            </TableRow>

            <TableRow
                android:layout_margin="2dp"
                android:gravity="center"
                android:padding="2dp">

                <ImageButton
                    android:id="@+id/random_button"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/randomize_button"
                    android:paddingStart="1dp"
                    android:paddingEnd="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ricontres" />

            </TableRow>

            <TableRow
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/card1"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_one"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card2"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_two"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card3"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_three"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card4"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_four"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

            </TableRow>

            <TableRow
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/card5"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_five"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card6"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_six"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card7"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_seven"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card8"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_eight"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

            </TableRow>

            <TableRow
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/card9"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_nine"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card10"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_ten"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card11"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_eleven"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/card12"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/card_twelve"
                    android:padding="1dp"
                    android:scaleType="fitXY" />

            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coleccion_background_p_grid_1"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/pscreen2_layout"
        app:layout_constraintStart_toStartOf="@+id/pscreen2_layout">

        <TableLayout
            android:id="@+id/pscreen2_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Space android:layout_height="50dp" />

            <TableRow
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/cologo1"
                    android:layout_width="400dp"
                    android:layout_height="80dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/coleccion_logo"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/coleccion_logo_b" />
            </TableRow>

            <Space android:layout_height="70dp" />

            <TableRow
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/resume_button"
                    android:layout_width="380dp"
                    android:layout_height="120dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/resume_button"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/resume_parallelogram" />
            </TableRow>

            <Space android:layout_height="50dp" />

            <TableRow
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/e_button"
                    android:layout_width="280dp"
                    android:layout_height="120dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/exit_button"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/exit_to_menu_triangle" />
            </TableRow>

            <Space android:layout_height="60dp" />

            <TableRow
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/e_button2"
                    android:layout_width="280dp"
                    android:layout_height="120dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/exit_button"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/exit_game_semicircle" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ViewFlipper>