<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/question_mark_dos"
    tools:context=".HelpScreens" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:padding="1dp" >

        <TableRow
            android:gravity="center">
            <TextView
                android:id="@+id/pgame"
                android:contentDescription="@string/playgame"
                android:layout_width="410dp"
                android:layout_height="70dp"
                android:textSize="35sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/yellow"
                android:background="@color/black"
                android:fontFamily="@font/ocraextended"
                android:text="@string/playgame" />
        </TableRow>

        <TableRow
            android:layout_margin="2dp"
            android:padding="2dp">
            <ImageView
                android:id="@+id/help_info5"
                android:contentDescription="@string/help_logo"
                android:layout_width="410dp"
                android:layout_height="540dp"
                android:src="@drawable/helppartthree"
                android:background="@android:color/transparent"/>
        </TableRow>

        <TableRow
            android:gravity="center">
            <TextView
                android:id="@+id/msgage"
                android:contentDescription="@string/hmsge"
                android:layout_width="410dp"
                android:layout_height="50dp"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@color/black"
                android:fontFamily="@font/ocraextended"
                android:text="@string/hmsge" />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_margin="1dp"
            android:padding="1dp">
            <ImageButton
                android:id="@+id/e_button32"
                android:contentDescription="@string/back_to_help_1"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:layout_weight="1"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:src="@drawable/previouspage1"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:id="@+id/e_button33"
                android:contentDescription="@string/exit_button"
                android:layout_width="390dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:layout_weight="1"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:src="@drawable/back_2_menu1"
                android:background="@android:color/transparent"/>
        </TableRow>
    </TableLayout>
</LinearLayout>